samples/_failures_safe/1761245062_a20571_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e64ea4f.c: In function ‘main’:
./samples/SAFE/__tmp_5e64ea4f.c:149:28: error: missing terminating " character
  149 |                     printf("
      |                            ^
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected expression at end of input
  149 |                     printf("
      |                     ^~~~~~
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e64ea4f.c:149:21: error: expected declaration or statement at end of input
